fix(SourcesCard): Fix jagged wrap layout
Body text of differing lengths could lead to a jagged wrapped layout. Cards should now flex to maintain similar heights/widths.

--- a/packages/module/src/SourcesCard/SourcesCard.scss
+++ b/packages/module/src/SourcesCard/SourcesCard.scss
@@ -25,6 +25,15 @@
     list-style: none;
     gap: var(--pf-t--global--spacer--xs);
   }
+
+  .pf-chatbot__sources-list-item {
+    display: flex;
+    width: var(--pf-chatbot-sources-card-max-width);
+  }
+
+  .pf-chatbot__sources-card {
+    flex: 1;
+  }
 }
 
 .pf-chatbot__sources-card {
